[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "OAuth client for Rust"
license = "MIT OR Apache-2.0"
name = "oauth-client"
readme = "README.md"
repository = "https://github.com/gifnksm/oauth-client-rs"
version = "0.5.2"
edition = "2018"

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.3"
ring = "0.16.20"
time = "0.2.26"
percent-encoding = "2.1.0"
thiserror = "1.0.24"
http = "0.2"
url = "2"

[features]
client-reqwest = ["reqwest"]
reqwest-blocking = ["client-reqwest"]
default = ["client-reqwest", "reqwest-blocking"]

[dependencies.reqwest]
optional = true
version = "0.11.3"
features = ["blocking"]

[dev-dependencies]
simple_logger="1"
tokio={version="1",features=["rt", "macros"]}

[badges]
maintenance = { status = "passively-maintained" }
