[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "OAuth client for Rust"
license = "MIT OR Apache-2.0"
name = "oauth-client"
readme = "README.md"
repository = "https://github.com/gifnksm/oauth-client-rs"
version = "0.6.0"
edition = "2018"
resolver = "2"

[dependencies]
base64 = "0.13.0"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.14"
rand = "0.8.3"
ring = "0.16.20"
time = "0.2.26"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.3", optional = true }
thiserror = "1.0.24"
http = "0.2"
url = { version = "2", optional = true }

[features]
client-reqwest = ["reqwest"]
reqwest-blocking = ["client-reqwest", "reqwest/blocking", "lazy_static", "url"]
default = ["client-reqwest", "reqwest-blocking"]

[dev-dependencies]
simple_logger = "1"
tokio = { version = "1", features = ["rt", "macros"] }
oauth-client = { path = ".", features = ["client-reqwest", "reqwest-blocking"] }

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
