[package]
name = "oauth-client"
version = "0.8.0"
edition = "2021"
rust-version = "1.57.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "OAuth client for Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/oauth-client-rs"

[dependencies]
base64 = "0.20.0"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.17"
rand = "0.8.5"
ring = "0.16.20"
time = "0.3.11"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.11", optional = true }
thiserror = "1.0.31"
http = "0.2.8"
url = { version = "2.2.2", optional = true }

[features]
client-reqwest = ["reqwest"]
reqwest-blocking = ["client-reqwest", "reqwest/blocking", "lazy_static", "url"]
default = ["client-reqwest", "reqwest-blocking"]

[dev-dependencies]
simple_logger = "2.2.0"
tokio = { version = "1.20.0", features = ["rt", "macros"] }
oauth-client = { path = ".", features = ["client-reqwest", "reqwest-blocking"] }

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "oauth-client = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" }
]
